# ocw-ipfs

./: README.md
node/: Cargo.toml
node/src/: service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
